# tree-sitter-io

./: Cargo.toml  LICENSE  binding.gyp  grammar.js  package-lock.json  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
corpus/: basics.txt
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
